# DigitalFramework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Utility.cmake
Digital/: CMakeLists.txt  Digital_.sln
Digital/Dependency/GLAD/: GLAD.vcxproj  GLAD.vcxproj.filters
Digital/Dependency/GLAD/Include/glad/: glad.h
Digital/Dependency/GLAD/Source/: glad.c
Digital/Dependency/libmap-cpp/: CMakeLists.txt
Digital/Dependency/libmap-cpp/libmap/: entity.h
Digital/DigitalFramework/Dependency/libmap-cpp/libmap/: brush.h
Digital/DigitalFramework/Source/DFW/Utility/: FamiltyTypeID.cpp
Digital/DigitalGame_/: CMakeLists.txt
Digital/DigitalGame_/Source/: main.cpp
Digital/DigitalGame_/Source/Zynthurism/: GameApplication.cpp  GameApplication.h  GameMaster.cpp  GameMaster.h  GameStageBase.h
Digital/DigitalGame_/Source/Zynthurism/Editor/: EditorStage.cpp  EditorStage.h
Digital/DigitalGame_/Source/Zynthurism/Game/: GameStage.cpp  GameStage.h  Level.cpp  Level.h  MainGameStage.cpp  TestEditorStage.cpp  TestEditorStage.h  TestStage.cpp  TestStage.h
Digital/DigitalGame_/Source/Zynthurism/Test/: TestEditorStage.cpp
Digital/DigitalTestBench_/: CMakeLists.txt
Digital/DigitalTestBench_/Source/: main.cpp
Digital/Digital_/: CMakeLists.txt  Digital_.vcxproj  Digital_.vcxproj.filters
Digital/Digital_/CMake/: ASSIMPSettings.cmake  JoltPhysicsSettings.cmake
Digital/Digital_/Dependency/libmap-cpp/libmap/: map_parser.cpp
Digital/Digital_/Include/AnyStorage/: AnyStorage.h  AnyStorageManager.h
Digital/Digital_/Include/AutoFactory/: AutoFactory.h
Digital/Digital_/Include/Defines/: Defines.h  MathDefines.h
Digital/Digital_/Include/ECS/: ECSCompBitList.h  ECSComponent.h  ECSEntity.h  ECSIDManager.h  ECSKeyLockSystem.h  ECSManager.h  ECSModule.h  ECSStorage.h  ECSStorageManager.h  ECSSubSystem.h  ECSystem.h
Digital/Digital_/Include/ECS/Managers/: ECSComponentManager.h  ECSEntityManager.h  ECSystemManager.h
Digital/Digital_/Include/ECS/Objects/: ECSComponent.h  ECSComponentHandle.h  ECSEntity.h  ECSEntityData.h  ECSystem.h
Digital/Digital_/Include/ECS/Utility/: ECSCompBitList.h  ECSIDManager.h  ECSKeyLockSystem.h
Digital/Digital_/Include/Utility/: StringUtility.h  TimeUtility.h
Digital/Digital_/Source/: main.cpp
Digital/Digital_/Source/AnyStorage/: AnyStorage.cpp  AnyStorage.h  AnyStorageManager.cpp  AnyStorageManager.h
Digital/Digital_/Source/AutoFactory/: AutoFactory.cpp  AutoFactory.h
Digital/Digital_/Source/CoreSystems/: ApplicationEvents.cpp  ApplicationEvents.h  ApplicationInstance.cpp  ApplicationInstance.h  Command.h  CoreServices.cpp  CoreServices.h  DUID.h  GameClock.cpp  GameClock.h  ImGuiLayer.cpp  ImGuiLayer.h  InputManagement.cpp  InputManagement.h  Logger.cpp  Logger.h  Memory.h  TimeTracker.cpp  TimeTracker.h  WindowManagement.cpp  WindowManagement.h
Digital/Digital_/Source/CoreSystems/Components/: ModelComponent.cpp  ModelComponent.h  TransformComponent.cpp
Digital/Digital_/Source/CoreSystems/Events/: ApplicationEvents.cpp  ApplicationEvents.h  EventDispatcher.h  EventImplementation.cpp  EventImplementation.h  EventLibrary.h
Digital/Digital_/Source/CoreSystems/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGui_Impl_BGFX_Rendering.cpp  ImGui_Impl_BGFX_Rendering.h  ImGui_Impl_BGFX_Utility.cpp  ImGui_Impl_BGFX_Utility.h  ImGui_Impl_BGFX_Window.cpp  ImGui_Impl_BGFX_Window.h
Digital/Digital_/Source/CoreSystems/Input/: InputData.cpp  InputData.h  InputKeys.h  InputManagement.cpp  InputManagement.h  RawInputEvents.h
Digital/Digital_/Source/CoreSystems/Logging/: CustomTypes.h  Logger.cpp  Logger.h
Digital/Digital_/Source/CoreSystems/Stage/: Stage.cpp  Stage.h  StageEvents.h  StageID.h  StageStackCommunicator.cpp  StageStackCommunicator.h  StageStackController.cpp  StageStackController.h
Digital/Digital_/Source/CoreSystems/Systems/: RenderSystem.cpp  RenderSystem.h
Digital/Digital_/Source/CoreSystems/Window/: WindowData.cpp  WindowData.h  WindowManagement.cpp  WindowManagement.h
Digital/Digital_/Source/DFW/: DFWPCH.cpp  DFWPCH.h
Digital/Digital_/Source/DFW/CoreSystems/: DUID.h
Digital/Digital_/Source/DFW/Utility/: FamiltyTypeID.h
Digital/Digital_/Source/Defines/: Defines.h  IDDefines.h  InputDefines.h  MathDefines.h  TimeDefines.h
Digital/Digital_/Source/ECS/: ECSEntity.cpp  ECSKeyLockSystem.cpp  ECSModule.cpp  ECSStorage.cpp  ECSStorageManager.cpp  ECSystem.cpp
Digital/Digital_/Source/ECS/Managers/: ECSComponentManager.cpp  ECSEntityManager.cpp  ECSystemManager.cpp
Digital/Digital_/Source/Editor/: EditorElement.cpp  EditorElementContainer.cpp  EditorElementContainer.h  EditorElementFiller.cpp  EditorElementFiller.h  MainDockStage.cpp  MainDockStage.h
Digital/Digital_/Source/GameSystems/: GameInstance.cpp  GameInstance.h
Digital/Digital_/Source/GameWorld/: GameEvents.cpp  GameEvents.h  GameObject.cpp  GameObject.h  GameObjectTagComponent.cpp  GameObjectTagComponent.h  GameSystem.cpp  GameSystem.h  GameWorld.cpp  GameWorld.h  SpawnInfo.cpp  SpawnInfo.h  Transform.cpp  Transform.h  TransformComponent.cpp  TransformComponent.h  TransformSystem.cpp  TransformSystem.h
Digital/Digital_/Source/Utility/: ColourUtility.cpp  ColourUtility.h  FamiltyTypeID.h  FileSystemUtility.cpp  FileSystemUtility.h  JoltUtility.h  StringUtility.cpp  StringUtility.h  TemplateUtility.cpp  TemplateUtility.h  TimeUtility.cpp  TimeUtility.h
Digital/Resources/: .gitignore  GenerateSourceFiles.bat
Digital/Resources/maps/default-test/: default-test.map  techflat2_grey1.tga  techflat2_red1.tga
Digital/Resources/models/xyz/: xyz_1x1m.glb
Digital/Resources/shaders/: bgfx_shaderlib.sh  fs_basic.sc  varying.def.sc  vs_basic.sc
Digital/Tools/: CleanBuild.bat  GenerateBuild.bat  GenerateDebugExecutable.bat  GenerateShaderFileList.bat  ManuelInitSubmodules.bat
ExampleProjects/DigitalGame/: CMakeLists.txt
ExampleProjects/DigitalGame/Source/: main.cpp
ExampleProjects/DigitalGame/Source/Zynthurism/: GameApplication.cpp  GameApplication.h
ExampleProjects/DigitalTestBench/: CMakeLists.txt
ExampleProjects/DigitalTestBench/Source/: main.cpp
(+463 files in other folders)
