cmake_minimum_required(VERSION 3.17.2)

set(PROJECT_NAME ProjectSolution)
project(${PROJECT_NAME})

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "_PredfinedTargetsFolder")

if(CMAKE_CONFIGURATION_TYPES)
set(CMAKE_CONFIGURATION_TYPES PreProcessorDebug Debug PreRelease Release Final)
set(CMAKE_CONFIGURATION_TYPES "${CMAKE_CONFIGURATION_TYPES}")
endif()

### PreProcessorDebug Config
set(CMAKE_CXX_FLAGS_PREPROCESSORDEBUG "/W4 /Zi /Od /Ob0 /RTC1 /MDd /P /DPDEBUG64")
set(CMAKE_EXE_LINKER_FLAGS_PREPROCESSORDEBUG "/DEBUG:FULL")
set(CMAKE_SHARED_LINKER_FLAGS_PREPROCESSORDEBUG "")

### Debug Config
set(CMAKE_CXX_FLAGS_DEBUG "/W4 /Zi /Od /Ob0 /RTC1 /MDd /DDEBUG64")
set(CMAKE_EXE_LINKER_FLAGS_DEBUG "/DEBUG:FULL")
set(CMAKE_SHARED_LINKER_FLAGS_DEBUG "")

### PreRelease Config
set(CMAKE_CXX_FLAGS_PRERELEASE "/W4 /Zi /Od /Ob0 /RTC1 /MDd /DPRERELEASE64")
set(CMAKE_EXE_LINKER_FLAGS_PRERELEASE "/DEBUG:FASTLINK")
set(CMAKE_SHARED_LINKER_FLAGS_PRERELEASE "")

### Release Config
set(CMAKE_CXX_FLAGS_RELEASE "/W4 /WX /O2 /Oi /Ot /MD /DRELEASE64")
set(CMAKE_EXE_LINKER_FLAGS_RELEASE "")
set(CMAKE_SHARED_LINKER_FLAGS_PRERELEASE "")

### Final Config
set(CMAKE_CXX_FLAGS_FINAL "/W4 /WX /O2 /Oi /Ot /MD /DFINAL64")
set(CMAKE_EXE_LINKER_FLAGS_FINAL "")
set(CMAKE_SHARED_LINKER_FLAGS_FINAL "")

add_subdirectory(Digital_)
add_subdirectory(DigitalGame_)
add_subdirectory(DigitalTestBench_)
